# ai-code-review

./: .gitignore  Modelfile  README.md  document.ipynb  main.py  pyproject.toml  vector.ipynb
app/: github_api.py  llm_api.py  prompt.py  service.py  utils.py
app/dto/: request_dto.py  review_request_dto.py
app/model/: code_review_result.py
