[tool.poetry]
name = "ai-code-review"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
requests = "^2.32.3"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-ollama = "^0.3.0"
langchain-chroma = "^0.2.2"
langchain-milvus = "^0.1.8"
langchain-experimental = "^0.3.4"
unstructured = { extras = ["md"], version = "^0.17.2" }
colorful-print = "^0.1.0"
unidiff = "^0.7.5"
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
gitpython = "^3.1.44"
redis = "^5.2.1"
jupyter = "^1.1.1"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
